--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,19 @@
     ],
     "require": {
         "php": "^8.2",
-        "typo3/cms-backend": "dev-main",
-        "typo3/cms-core": "dev-main",
-        "typo3/cms-extbase": "dev-main",
-        "typo3/cms-fluid": "dev-main",
-        "typo3/cms-fluid-styled-content": "dev-main",
-        "typo3/cms-impexp": "dev-main",
-        "typo3/cms-linkvalidator": "dev-main",
-        "typo3/cms-reactions": "dev-main"
+        "typo3/cms-backend": "^13.1 || dev-main",
+        "typo3/cms-core": "13.1 || dev-main",
+        "typo3/cms-extbase": "13.1 || dev-main",
+        "typo3/cms-fluid": "13.1 || dev-main",
+        "typo3/cms-fluid-styled-content": "13.1 || dev-main",
+        "typo3/cms-impexp": "13.1 || dev-main",
+        "typo3/cms-linkvalidator": "13.1 || dev-main",
+        "typo3/cms-reactions": "13.1 || dev-main"
     },
     "require-dev": {
-        "ergebnis/composer-normalize": "~2.42.0",
+        "ergebnis/composer-normalize": "^2.42",
         "friendsofphp/php-cs-fixer": "^3.52",
-        "rector/rector": "1.0.3"
+        "ssch/typo3-rector": "^2.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
