--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "ergebnis/composer-normalize": "^2.42",
         "friendsofphp/php-cs-fixer": "^3.52",
+        "phpstan/phpstan": "^1.10",
         "ssch/typo3-rector": "^2.3"
     },
     "minimum-stability": "dev",
