--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require-dev": {
         "ergebnis/composer-normalize": "~2.42.0",
         "friendsofphp/php-cs-fixer": "^3.52",
-        "rector/rector": "1.0.3"
+        "ssch/typo3-rector": "^2.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
